@@ -1605,6 +1605,8 @@ MS_DLL_EXPORT char *msDoubleToString(double value);
 MS_DLL_EXPORT char *msIntToString(int value);
 MS_DLL_EXPORT void msStringToUpper(char *string);
 MS_DLL_EXPORT void msStringToLower(char *string);
+MS_DLL_EXPORT int msEncodeChar(const char);
+MS_DLL_EXPORT char *msEncodeUrlExcept(const char*, const char);
 MS_DLL_EXPORT char *msEncodeUrl(const char*);
 MS_DLL_EXPORT char *msEncodeHTMLEntities(const char *string);
 MS_DLL_EXPORT void msDecodeHTMLEntities(const char *string);
